k8s-microservices-lab/catalog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: ealen/echo-server:0.8.11
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog
  ports:
  - port: 80
    targetPort: 80
