k8s-microservices-lab/orders-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: ealen/echo-server:0.8.11
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
spec:
  selector:
    app: orders
  ports:
  - port: 80
    targetPort: 80
