k8s-microservices-lab/users-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: ealen/echo-server:0.8.11
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
spec:
  selector:
    app: users
  ports:
  - port: 80
    targetPort: 80
